# rustcraft

./: .gitignore  Cargo.toml  shell.nix
crates/protocol/: Cargo.toml
crates/protocol/src/: decoder.rs  encoder.rs  lib.rs  macros.rs  nbt.rs  packets.rs  plugin.rs  registry.rs
crates/protocol/src/impls/: bounded.rs  container.rs  mod.rs  other.rs  position.rs  primitive.rs  profile.rs  raw.rs  string.rs  tuple.rs  varnum.rs
crates/protocol/src/types/: mod.rs  primitive.rs  varnum.rs
crates/protocol_derive/: Cargo.toml
crates/protocol_derive/src/: decode.rs  encode.rs  lib.rs  packet.rs  protocol.rs
crates/protocol_macros/: Cargo.toml
crates/protocol_macros/src/: encode.rs  lib.rs
src/: axis.rs  blocks.rs  core.rs  direction.rs  fly_camera.rs  main.rs  network.rs  player.rs  prelude.rs  state.rs  states.rs  texture.rs  textures.rs
src/block/: blockstate.rs  mod.rs  model.rs
src/model/: block.rs  mod.rs
src/protocol/: mod.rs  profile.rs  types.rs
src/protocol/versions/: mod.rs  v1_20_4.rs
src/registry/: block_registry.rs  item_registry.rs  mod.rs
src/world/: mod.rs
