[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
aes = "0.8.4"
anyhow = { version = "1.0.86", features = ["backtrace"] }
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", version = "0.8.1" }
bevy_egui = "0.27.0"
bevy_rapier3d = "0.26.0"
bevy_reflect = "0.13.2"
byteorder = "1.5.0"
bytes = "1.6.0"
cfb8 = "0.8.1"
flate2 = "1.0.30"
indexmap = "2.2.6"
rand = "0.8.5"
serde = "1.0.202"
thiserror = "1.0.61"
uuid = "1.8.0"
zip = "1.3.0"
