[package]
name = "rustcraft"
version.workspace = true
edition.workspace = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_editor_pls.workspace = true
bevy_rapier3d.workspace = true
bimap.workspace = true
bytes.workspace = true
derive_more.workspace = true
protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
aes = "0.8.4"
anyhow = { version = "1.0.86", features = ["backtrace"] }
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", version = "0.8.1" }
bevy_egui = "0.27.0"
bevy_rapier3d = "0.26.0"
bevy_reflect = "0.13.2"
bimap = "0.6.3"
byteorder = "1.5.0"
bytes = "1.6.0"
cfb8 = "0.8.1"
derive_more = "0.99.17"
flate2 = "1.0.30"
heck = "0.5.0"
indexmap = "2.2.6"
mem_macros = "1.0.1"
proc-macro2 = "1.0.84"
quote = "1.0.36"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
syn = "2.0.66"
thiserror = "1.0.61"
uuid = "1.8.0"
zip = "2.1.0"
protocol = { path = "crates/protocol" }
protocol_derive = { path = "crates/protocol_derive" }
