[package]
name = "rustcraft"
version.workspace = true
edition.workspace = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_editor_pls.workspace = true
bevy_mod_mesh_tools.workspace = true
bevy_rapier3d.workspace = true
bimap.workspace = true
bytes.workspace = true
derive_more.workspace = true
indexmap.workspace = true
protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
aes = "0.8.4"
anyhow = { version = "1.0.89", features = ["backtrace"] }
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.26.0"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", version = "0.9.0" }
bevy_mod_mesh_tools = { git = "https://github.com/DGriffin91/bevy_mod_mesh_tools" }
bevy_rapier3d = "0.27.0"
bimap = "0.6.3"
byteorder = "1.5.0"
bytes = "1.7.2"
cfb8 = "0.8.1"
derive_more = { version = "1.0.0", features = ["full"] }
flate2 = "1.0.34"
heck = "0.5.0"
indexmap = { version = "2.5.0", features = ["serde"] }
mem_macros = "1.0.1"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
syn = "2.0.79"
uuid = "1.10.0"
protocol = { path = "crates/protocol" }
protocol_derive = { path = "crates/protocol_derive" }
