[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
aes.workspace = true
anyhow.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true
bytes.workspace = true
derive_more.workspace = true
cfb8.workspace = true
thiserror.workspace = true
uuid.workspace = true
protocol_derive.workspace = true
mem_macros.workspace = true
