[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
aes.workspace = true
anyhow.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true
bimap.workspace = true
byteorder.workspace = true
bytes.workspace = true
cfb8.workspace = true
derive_more.workspace = true
flate2.workspace = true
indexmap.workspace = true
mem_macros.workspace = true
protocol_derive.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
